--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn --chdir backend 'app:create_app()' --bind 0.0.0.0:${PORT:-8000}
+    web: gunicorn --chdir backend 'app:create_app()' --workers 1 --threads 2 --timeout 120 --bind 0.0.0.0:${PORT:-8000}
